<resources>
    <string name="app_name">ServiceDemo24</string>
    <string name="title_monitoring">Мониторинг курса Ethereum (ETH/USD)</string>
    <string name="current_rate">Текущий курс: %s USD</string>
    <string name="refresh_rate">Обновить курс</string>
    <string name="start_rate_hint">Стартовый курс (например, 1900)</string>
    <string name="target_change_hint">Порог изменения (например, 50)</string>
    <string name="button_start">Запустить отслеживание</string>
    <string name="button_stop">Остановить отслеживание</string>
    <string name="info_text">Сервис будет отслеживать изменение курса от указанного стартового значения. При достижении порога (вверх или вниз) будет отправлено уведомление.</string>
    <string name="service_started">Сервис запущен</string>
    <string name="service_stopped">Сервис остановлен</string>
    <string name="enter_both">Введите оба значения</string>
</resources>